<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="delimitator">-------------------------</string>
    <string name="hello">Hello World, StartExecution!</string>
    <string name="app_name">Offloading Framework</string>
    <string name="cpuLoader1">CPU Loader #1</string>
    <string name="cpuLoader2">CPU Loader #2</string>
    <string name="cpuLoader3">CPU Loader #3</string>
    <string name="scenario1">Scenario 1</string>
    <string name="scenario2">Scenario 2</string>
    <string name="jni1">JNI test 1</string>
    <string name="benchmark1">Benchmark Bundle 1</string>
    <string name="benchmark2">Benchmark Bundle 2</string>
    <string name="allBundles">All Bundles</string>
    <string name="puzzleScenariosTitle">Puzzle Scenarios</string>
    <string name="chooseApplication">Choose the application to offload</string>
    <string name="chooseOptimization">Choose what to optimize by offloading</string>
    <string name="faceDetection">Face Detection</string>
    <string name="virusScanning">Virus Scanning</string>
    <string name="sudoku">Solve Sudoku</string>
    <string name="eightQueens">Solve NQueens</string>
    <string name="radioButtonStaticLocal">Always Local</string>
    <string name="radioButtonStaticRemote">Always Remote</string>
    <string name="radioButtonEnergy">Energy</string>
    <string name="radioButtonTime">Delay (Execution Time + Communication)</string>
    <string name="radioButtonTimeEnergy">Energy and Delay</string>
    <string name="allExperiments">Run All Experiments</string>
    <string name="nrClones">Number of VMs:</string>
    <string name="nrQueens">Number of Queens:</string>
    <string name="nrPhotos">Number of Photos:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="start_as_new_button_description">cloneId = -1 means connect to the first available clone.</string>
	<string name="start_as_new_button">Connect to clone with id:</string>
	<string name="start_as_old_button">Connect to Dirservice</string>

    

</resources>