<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableRow>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/nrClones"
                android:layout_weight="0" />

            <Spinner
                android:id="@+id/spinnerNrClones"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/nrClonesValues" />
        </TableRow>

        <!--
    <TextView android:id="@+id/batteryLevel" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:gravity="center_vertical"
		android:text="Single Methods" />

	<Button android:id="@+id/cpuLoader1" android:text="@string/cpuLoader1"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:onClick="onClickLoader1" />

	<Button android:id="@+id/cpuLoader2" android:text="@string/cpuLoader2"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:onClick="onClickLoader2" />

	<Button android:id="@+id/cpuLoader3" android:text="@string/cpuLoader3"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:onClick="onClickLoader3" />
        -->
        <!--
	<TableRow>
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:gravity="center_vertical"
		android:text="CalcIntensive scenarios" />
	</TableRow>
	<TableRow>
	<Button android:id="@+id/scenario1" android:text="@string/scenario1"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:onClick="onClickScenario1" />

	<Button android:id="@+id/scenario2" android:text="@string/scenario2"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:onClick="onClickScenario2" />
	</TableRow>
        -->
        <!--
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:gravity="center_vertical"
		android:text="JNI tests" />

	<Button android:id="@+id/jni1" android:text="@string/jni1"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:onClick="onClickJni1" />
        -->
        <!--
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:gravity="center_vertical"
		android:text="Benchmark Bundles" />
        -->

        <RadioGroup
            android:id="@+id/executionRadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/chooseOptimization" />

            <RadioButton
                android:id="@+id/radio_exec_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onRadioExecLocationChecked"
                android:text="@string/radioButtonTime" />

            <RadioButton
                android:id="@+id/radio_energy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioExecLocationChecked"
                android:text="@string/radioButtonEnergy" />

            <RadioButton
                android:id="@+id/radio_exec_time_energy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioExecLocationChecked"
                android:text="@string/radioButtonTimeEnergy" />
            
          	<RadioButton
                android:id="@+id/radio_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioExecLocationChecked"
                android:text="@string/radioButtonStaticLocal" />

            <RadioButton
                android:id="@+id/radio_remote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onRadioExecLocationChecked"
                android:text="@string/radioButtonStaticRemote" />
        </RadioGroup>

		<TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/chooseApplication" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/delimitator" />

            <Button
                android:id="@+id/virsuScanning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickVirusScanning"
                android:text="@string/virusScanning" />

        <!--
	<Button android:id="@+id/benchmark2" android:text="@string/benchmark2"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:onClick="onClickBenchmark2" />
	

	<Button android:id="@+id/allBundles" android:text="@string/allBundles"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:onClick="onClickBenchmarksAll" />
        -->

        <TableRow>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/nrPhotos" />

            <Spinner
                android:id="@+id/spinnerNrPhotos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/nrPhotosValues" />

            <Button
                android:id="@+id/faceDetection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickFaceDetection"
                android:text="@string/faceDetection" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/nrQueens" />

            <Spinner
                android:id="@+id/spinnerNrQueens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/nrQueensValues" />

            <Button
                android:id="@+id/eightQueens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickQueenSolver"
                android:text="@string/eightQueens" />
        </TableRow>
        
        
        <Button
            android:id="@+id/benchmark1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickBenchmark1"
            android:text="@string/benchmark1" />

    </TableLayout>

</ScrollView>